--- a/src/index.html
+++ b/src/index.html
@@ -3,27 +3,27 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hello Rigo with Vanilla.js</title>
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
-      integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
-      crossorigin="anonymous"
-    />
-    <link rel="shortcut icon" href="./4geeks.ico" />
+    <title>Random Card Generator</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <link rel="stylesheet" href="./style.css">
   </head>
   <body>
-    <div class="container-fluid text-center">
-      <h1 class="mt-5">Hello Rigo!</h1>
-      <img src="./rigo-baby.jpg" />
-      <p class="alert alert-warning mt-4">
-        If this text is <b>not</b> centered and <b>yellow</b>, you probably have
-        an error
-      </p>
-      <div class="fixed-bottom p-4">
-        Made with ❤️ by
-        <a href="https://www.4geeksacademy.com">4Geeks Academy</a>
+    <div class="card mx-auto my-5" style="width:20rem; height: 28rem;">
+      <div class="card-body">
+       <h1 class="card-title position-absolute top-0 start-0 ms-3" id="topSuit"></h1>
+       <h1 class="card-title ms-end position-absolute top-50 start-50 translate-middle midNum"></h1>
+       <h1 class="card-title position-absolute bottom-0 end-0 me-3" id="botSuit"></h1>
       </div>
     </div>
+    <div class="d-flex p-2 justify-content-center">
+    <button onclick="location.reload()" type="button" class="btn btn-light">Generate new Card</button>
+    <button id="autoGen" type="button" class="btn btn-light mx-2">Generate a card every 10 seconds</button>
+    <button id="stopButton"type="button" class="btn btn-light">Stop the automatic generation</button>
+  </div>
+  
+
+    <script src="./app.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+    
   </body>
 </html>
